--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
    <div class="footer">
    <div class="container">
-      <p class="copy">&copy; 2016 <a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
+      <p class="copy">&copy; 2016 
+	  <a href="https://github.com/javieraparisi">Javier Aparisi</a> Powered by <a href="http://jekyllrb.com">Jekyll</a></p>
 
       <div class="footer-links"> 
          <ul class="noList"> 
